homepage spacing fixed

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -27,6 +27,7 @@
     position: relative;
     height: auto;
     border-radius: 8px;
+    margin-left: 196px;
 }
 
 .home-user-container {
@@ -37,7 +38,8 @@
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    margin: 2em;
+    margin-right: 196px;
+    box-shadow: 0 1px 1px rgb(0 22 36 / 8%), 0 1px 3px rgb(0 22 36 / 16%); 
 }
 
 .home-user-icon {
